# ripple-env

./: .abacus.donotdelete  .env.example  .env.qudag.example  .env.state.example  .envrc  .gitattributes  .gitignore  .gitleaks.toml  .npmrc  .pre-commit-config.yaml  .trivyignore  .trivyignore.yaml  ARIA_MANIFEST.yaml  BUILD_SUMMARY.md  CHANGELOG.md  CHANGELOG_RELEASE.md  CONFIG_SUMMARY.yaml  CONTRIBUTING.md  CONVERSATION_SUMMARY.md  ENVIRONMENT_VARIABLES_RELOCATION.md  FLAKE_FIXES_SUMMARY.md  HANDOFF_PROMPT.md  HASHES.configs.txt  HASHES.full.txt  Makefile  NIX_FLAKE_TEST_REPORT.md  README.md  REALISTIC IMMEDIATE ACTION GUIDE.md  SECURITY.md  SECURITY_ENHANCEMENTS.md  SYNC_SUMMARY.md  VIBE_KANBAN_INTEGRATION_PLAN.md  WSL_STABILITY_GUIDE.md  archives  bootstrap.ps1  bootstrap.sh  docker-compose.observability.yml  docker-compose.qudag.yml  docker-compose.ruvector.yml  flake.nix  (+25 more)
.aria/: ARIA_TASK_EXTRACTION_COMPLETE.txt  ARIA_TASK_REFERENCE.md  CROSS-ANALYSIS-SUMMARY.md  DEPENDENCY_VALIDATION_REPORT.yaml  FINAL-IMPLEMENTATION-REPORT-2026-01-10.yaml  IMPLEMENTATION-SYNTHESIS-2026-01-10.yaml  P0-VERIFICATION-REPORT.yaml  P1_TASKS.yaml  WAVE3-EXECUTIVE-SUMMARY.md  audit-domain-1-host-os.yaml  cross-analysis-synthesis.yaml
.backups/: tmp
.claude/: AGENT.md  CLAUDE.md  INDEX.md  RULES.md  SKILL.md  mcp-servers.json  settings.json  settings.local.json
.claude-plugin/: plugin.json
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link
.github/: copilot-instructions.md  dependabot.yml
agents/: deploy.js  monitor.js  test.js
archives/: README.md
charts/: README.md
config/: mirrors.yaml  offline.yaml
docker/: agixt.yml  aios.yml  argocd.yml  docker-compose.agixt.yml  docker-compose.aios.yml  docker-compose.argo.yml  docker-compose.automation.yml  docker-compose.caching.yml  docker-compose.data.yml  docker-compose.edge.yml  docker-compose.holochain.yml  docker-compose.identity.yml  docker-compose.inference.yml  docker-compose.lightweight.yml  docker-compose.llmops.yml  docker-compose.localai.yml  docker-compose.messaging.yml  docker-compose.observability.yml  docker-compose.refact.yml  docker-compose.state.yml  docker-compose.temporal.yml  docker-compose.ui.yml  docker-compose.yml  grafana.yml  ipfs.yml  kong.yml  lobe-chat.yml  localai.yml  minio.yml  prometheus.yml  tensorzero.yml  trivy.yml  vault.yml
docs/: AGENT_CONFIGURATION.md  AI_RESOURCE_REQUIREMENTS.md  ARCHITECTURE.md  ARTIFACTS.md  BUILDKIT_STARTER_SPEC.md  CATALOG.json  CHANGELOG_DOCS.md  CHANNEL-STRATEGY.md  CICD_FLOWS.md  COMMON_PITFALLS.md  COMPATIBILITY_MATRIX.md  (+60 more)
rust/: Cargo.toml
rust/agixt-bridge/: Cargo.toml
rust/agixt-bridge/examples/: basic_chat.rs
rust/src/: main.rs
(+763 files in other folders)
