# AgentGateway MCP Routing - Rust Implementation (BUILDKIT L4)
# P3-001: AgentGateway provides MCP (Model Context Protocol) routing for agents
#
# This Cargo.toml defines the Rust workspace for AgentGateway integration
# AgentGateway enables:
#   - MCP protocol routing
#   - Agent-to-tool communication
#   - Context protocol translation
#   - Plugin system for capabilities
#
# References:
#   - https://github.com/agentgateway/agentgateway
#   - https://modelcontextprotocol.io
#   - BUILDKIT_STARTER_SPEC.md L4: Edge & Agent Traffic

[workspace]
members = [
    "agixt-bridge",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FlexNetOS Contributors"]
description = "AgentGateway MCP routing for the agentic OS"
license = "MIT OR Apache-2.0"
repository = "https://github.com/FlexNetOS/ripple-env"

# Workspace dependencies
[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# HTTP client/server
hyper = { version = "0.14", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# MCP Protocol
mcp-rust-sdk = { version = "0.1", git = "https://github.com/modelcontextprotocol/rust-sdk" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"

# OpenTelemetry
opentelemetry = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.20"

# Configuration
config = "0.13"
dotenv = "0.15"
clap = { version = "4.4", features = ["derive", "env"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once = "0.12"
base64 = "0.21"
hex = "0.4"
url = "2.5"

# Testing
#[cfg(test)]
tokio-test = "0.4"
mockall = "0.12"

# Development
#[cfg(dev)]
criterion = "0.5"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
strip = true